--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@reach/descendants": "0.9.1",
+    "@reach/visually-hidden": "0.9.0",
+    "@types/obj-str": "1.0.0",
+    "obj-str": "1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
@@ -28,5 +32,8 @@
   "scripts": {
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
+  },
+  "peerDependencies": {
+    "date-fns": "2.11.0"
   }
 }
