--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@storybook/addon-links": "~5.3.17",
     "@storybook/addons": "~5.3.17",
     "@storybook/react": "~5.3.17",
+    "@storybook/storybook-deployer": "2.8.3",
     "@types/jest": "25.1.4",
     "@types/react": "16.9.25",
     "@types/react-dom": "16.9.5",
@@ -31,7 +32,7 @@
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "deploy-storybook": "storybook-to-ghpages"
   },
   "peerDependencies": {
     "date-fns": "2.11.0"
